Changed the link in the contact page (nav-bar).

--- a/contact-us.html
+++ b/contact-us.html
@@ -15,9 +15,8 @@
         </div>
             <ul>
                 <a href="home.html"><li>Home</li></a>
-                <a href="endangered-animal-list.html"><li>Animal List</li></a>
-                <a href="endangered.html"><li>Endangered animals</li></a>
-               
+                <a href="endangered.html"><li>Endangered Animals</li></a>
+                <a href="about-animals.html"><li>About Animals</li></a>
                 </ul>
          </div>
     </nav>
