corrected spelling error in the about page

--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@ Our mission is to find wild animals in different parts of the country and give t
     <img src="images/about.jpg">
     </div>
     <div class="about-text2">
-<p> Angela Llano founded the program in 1963. It has 53 years of success. Ms. Llano started out this company in Africa.  Disclaimer: This is a fictious website created by Angela Llano. In her attempt to learn how to code, She was searching through the internet and came across The NYPL Project Code Program. She applied to the program and was selected to participate. Prior to entering the program she had no knowledge of HTML or CSS. As a result of the program, Angela has created this website. She acknowledges her instructor who gave her instructional details on how to code. Angela also acknowledges her classmates who colaborated with her in a class project. It was through the class colaboration that she received the inspirational idea of creating her website on endangered animals. 
+<p> Angela Llano founded the program in 1963. It has 53 years of success. Ms. Llano started out this company in Africa.  Disclaimer: This is a fictious website created by Angela Llano. In her attempt to learn how to code, She was searching through the internet and came across The NYPL Project Code Program. She applied to the program and was selected to participate. Prior to entering the program she had no knowledge of HTML or CSS. As a result of the program, Angela has created this website. She acknowledges her instructor who gave her instructional details on how to code. Angela also acknowledges her classmates who collaborated with her in a class project. It was through the class collaboration that she received the inspirational idea of creating her website on endangered animals. 
 </p>
 </div>
 </div>
